--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="hint"><a href="#">Forget your password?</a></div>
                 </div>
-                <button class="btn"><a href="#">Enter</a></button>
+                <button class="btn">Enter</button>
                 <div class="account">
                     <div class="account__text">Don't have an account?</div>
                     <div class="sign__up"><a href="#">Sign up</a></div>
